<resources>
    <string name="app_name" translatable="false">Kotlin Sentences</string>
    <string name="get_a_new_quotation">Get a new quotation</string>
    <string name="favourite_quotations">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_content">KotlinQuotes by \n\nJosep\n\njosepdev23@gmail.com\n\nDeveloped for DADM 2023</string>
    <string name="josep_real">josep real</string>
    <string name="addButton">add button</string>
    <string name="welcomeMsg">Hello %1s!,\\n\\nRefresh to get a new quotation  (swipe down or options menu)</string>
    <string name="anonymous">Anonymous</string>
    <string name="refresh">Refresh</string>
    <string name="deleteFavouriteQuotationsAlertTitle">Delete all favourite quotations</string>
    <string name="deleteFavouriteQuotationsAlertMessage">Do you really want to delete all quotations?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleteAllQuotations">Delete all quotations</string>
    <string name="anonymusError">Information cannot be displayed if the author is anonymous</string>
    <string name="baseWikiUri" translatable="false">https://en.wikipedia.org/wiki/Special:Search?search=%1s</string>
    <string name="errorPageNotFound">Cannot display the requested page</string>
    <string name="unkownError">Unknown error</string>
    <string name="noInternetException">ERROR: missing internet connection</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="en" translatable="false">en</string>
    <string name="ru" translatable="false">ru</string>
    <string name="username">Username</string>
    <string name="language">Language</string>
    <string name="hintUserName">Insert username</string>
</resources>