<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/newQuotationFragment">

    <dialog
        android:id="@+id/aboutDialogFragment"
        android:name="dadm.jramrib.kotlinsentences.ui.about.AboutDialogFragment"
        android:label="@string/about" />
    <fragment
        android:id="@+id/newQuotationFragment"
        android:name="dadm.jramrib.kotlinsentences.ui.newquotation.NewQuotationFragment"
        android:label="@string/get_a_new_quotation" />
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="dadm.jramrib.kotlinsentences.ui.favourites.FavouritesFragment"
        android:label="@string/favourite_quotations" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="dadm.jramrib.kotlinsentences.ui.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/actionDeleteAllDialogFragment"
            app:destination="@+id/deleteAllDialogFragment"/>
    </fragment>

    <dialog
        android:id="@+id/deleteAllDialogFragment"
        android:name="dadm.jramrib.kotlinsentences.ui.favourites.DeleteAllDialogFragment"
        android:label="@string/deleteFavouriteQuotationsAlertTitle"/>
</navigation>